[gd_scene load_steps=2 format=3 uid="uid://byy1faxcc3jjv"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_23fhi"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23fhi")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -68.0
offset_right = 46.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Continue"

[node name="New Game" type="Button" parent="Buttons"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
text = "Exit"

[connection signal="pressed" from="Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
